dev 5.0 - 1 大致框架搭建

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,18 +20,10 @@
         android:gravity="center">
 
         <com.example.q.pocketmusic.view.widget.view.TabView
-            android:id="@+id/home_tab_local_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:itemTabName="口袋"
-            app:itemTabNoSelectIco="@drawable/tab_home_local_normal"
-            app:itemTabSelectIco="@drawable/tab_home_local_press" />
-
-        <com.example.q.pocketmusic.view.widget.view.TabView
             android:id="@+id/home_tab_net_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:itemTabName="寻谱"
+            app:itemTabName="首页"
             app:itemTabNoSelectIco="@drawable/tab_home_net_normal"
             app:itemTabSelectIco="@drawable/tab_home_net_press" />
 
@@ -42,6 +34,15 @@
             app:itemTabName="求谱"
             app:itemTabNoSelectIco="@drawable/tab_home_ask_normal"
             app:itemTabSelectIco="@drawable/tab_home_ask_press" />
+
+        <com.example.q.pocketmusic.view.widget.view.TabView
+            android:id="@+id/home_tab_local_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:itemTabName="本地谱单"
+            app:itemTabNoSelectIco="@drawable/tab_home_local_normal"
+            app:itemTabSelectIco="@drawable/tab_home_local_press" />
+
 
         <com.example.q.pocketmusic.view.widget.view.TabView
             android:id="@+id/home_tab_profile_tab"
