--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/bg_search_view"
+        android:background="@drawable/shape_search_view"
         android:hint="..."
         android:padding="8dp"
         android:textColorHint="#5c5c5c" />
