--- a/app/src/main/res/layout/item_combination_text.xml
+++ b/app/src/main/res/layout/item_combination_text.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/item_padding_16dp"
-    android:paddingTop="@dimen/item_padding_16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingBottom="8dp"
+    android:paddingTop="8dp">
 
     <TextView
+        tools:text="- 热门曲谱 -"
         android:id="@+id/text_tv"
-        style="@style/Base.TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        android:textColor="#999999"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="我的乐器" />
+        android:gravity="center" />
 
 </RelativeLayout>
