--- a/app/src/main/res/layout/item_recommend_list.xml
+++ b/app/src/main/res/layout/item_recommend_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recommend_content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/item_padding_16dp">
+    android:padding="8dp">
 
     <LinearLayout
         style="@style/TwoTextLinear"
