--- a/app/src/main/res/animator/anim_laba.xml
+++ b/app/src/main/res/animator/anim_laba.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="500"
-    android:propertyName="alpha"
-    android:repeatCount="infinite"
-    android:repeatMode="reverse"
-    android:valueFrom="0"
-    android:valueTo="1"
-    android:valueType="floatType">
+<set>
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="800"
+        android:propertyName="scaleX"
+        android:repeatCount="infinite"
+        android:repeatMode="restart"
+        android:valueFrom="0.9"
+        android:valueTo="1"
+        android:valueType="floatType">
 
-</objectAnimator>
+    </objectAnimator>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="800"
+        android:propertyName="scaleY"
+        android:repeatCount="infinite"
+        android:repeatMode="restart"
+        android:valueFrom="0.9"
+        android:valueTo="1"
+        android:valueType="floatType">
+
+    </objectAnimator>
+</set>
