--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -13,41 +13,13 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <View style="@style/SettingDivider" />
 
-    <RelativeLayout
-        android:id="@+id/record_rl"
+    <FrameLayout
+        android:id="@+id/bottom_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp">
+        android:layout_height="wrap_content" />
 
-        <ImageView
-            android:id="@+id/record_play_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ico_media_record" />
-
-        <TextView
-            android:id="@+id/time_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:text="已录制：0 秒" />
-
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/avi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:visibility="invisible"
-            app:indicatorColor="@color/colorPrimary"
-            app:indicatorName="LineScaleIndicator" />
-
-
-    </RelativeLayout>
 
     <View style="@style/SettingDivider" />
 
