--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -6,16 +6,31 @@
     android:padding="@dimen/item_padding_16dp">
 
     <TextView
-
         android:id="@+id/suggestion_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="暂无" />
 
-    <TextView
-        android:id="@+id/reply_tv"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="暂无" />
+        android:layout_gravity="right"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/reply_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="暂无" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ico_launcher" />
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
