--- a/app/src/main/res/layout/item_combination_type_ll.xml
+++ b/app/src/main/res/layout/item_combination_type_ll.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/item_padding_16dp">
 
     <LinearLayout
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
