--- a/app/src/main/res/drawable/ic_vec_top.xml
+++ b/app/src/main/res/drawable/ic_vec_top.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M612.5,901.1 L404.4,901.1c-31.7,0 -57.5,-25.8 -57.5,-57.5L346.9,644.4c0,-0.3 -0.3,-0.6 -0.6,-0.6L238,643.8c-27.7,0 -37.7,-16.3 -40.8,-23.3 -3.1,-7 -8.1,-25.5 10.7,-45.8l259.9,-279c10.6,-11.3 25.4,-17.8 40.6,-17.8s30.1,6.5 40.6,17.8l259.9,279c18.8,20.2 13.8,38.7 10.7,45.8 -3.1,7 -13.1,23.3 -40.8,23.3L670.6,643.8c-0.3,0 -0.6,0.4 -0.6,0.6l0,199.1C670,875.3 644.2,901.1 612.5,901.1zM274.3,586.9l71.9,0c31.7,0 57.5,25.8 57.5,57.5l0,199.1c0,0.3 0.3,0.6 0.6,0.6l208.1,0c0.3,0 0.6,-0.4 0.6,-0.6L613.1,644.4c0,-31.7 25.8,-57.5 57.5,-57.5l71.9,0L508.4,335.5 274.3,586.9zM788.1,234.7 L228.8,234.7c-15.7,0 -28.4,-12.7 -28.4,-28.4s12.7,-28.4 28.4,-28.4l559.2,0c15.7,0 28.4,12.7 28.4,28.4S803.8,234.7 788.1,234.7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="#999999"
+        android:pathData="M612.5,901.1 L404.4,901.1c-31.7,0 -57.5,-25.8 -57.5,-57.5L346.9,644.4c0,-0.3 -0.3,-0.6 -0.6,-0.6L238,643.8c-27.7,0 -37.7,-16.3 -40.8,-23.3 -3.1,-7 -8.1,-25.5 10.7,-45.8l259.9,-279c10.6,-11.3 25.4,-17.8 40.6,-17.8s30.1,6.5 40.6,17.8l259.9,279c18.8,20.2 13.8,38.7 10.7,45.8 -3.1,7 -13.1,23.3 -40.8,23.3L670.6,643.8c-0.3,0 -0.6,0.4 -0.6,0.6l0,199.1C670,875.3 644.2,901.1 612.5,901.1zM274.3,586.9l71.9,0c31.7,0 57.5,25.8 57.5,57.5l0,199.1c0,0.3 0.3,0.6 0.6,0.6l208.1,0c0.3,0 0.6,-0.4 0.6,-0.6L613.1,644.4c0,-31.7 25.8,-57.5 57.5,-57.5l71.9,0L508.4,335.5 274.3,586.9zM788.1,234.7 L228.8,234.7c-15.7,0 -28.4,-12.7 -28.4,-28.4s12.7,-28.4 28.4,-28.4l559.2,0c15.7,0 28.4,12.7 28.4,28.4S803.8,234.7 788.1,234.7z" />
 </vector>
