--- a/app/src/main/res/layout/fragment_home_profile.xml
+++ b/app/src/main/res/layout/fragment_home_profile.xml
@@ -55,6 +55,14 @@
             app:itemTitleIco="@drawable/ic_vec_setting_pingfen"
             app:itemTitleText="评个分吧！" />
 
+        <View style="@style/SettingDivider" />
+
+        <com.example.q.pocketmusic.view.widget.view.IcoTextItem
+            android:id="@+id/support_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:itemTitleIco="@drawable/ic_vec_profile_support"
+            app:itemTitleText="支持开发者" />
 
         <View style="@style/SettingBigDivider" />
 
