--- a/app/src/main/res/drawable/ic_vec_suggestion.xml
+++ b/app/src/main/res/drawable/ic_vec_suggestion.xml
@@ -1,7 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1332.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M756.5,190.4l-369.1,-0.7c-57.1,0 -98.7,42.6 -98.7,99.8l-0.6,533.9c0,57.2 39.2,95.4 96.3,95.4h551.1c57.1,0 91.1,-40.8 91.1,-98l0.4,-382.2 49.7,-50.5v454c0,66.2 -53.6,119.9 -119.8,119.9h-598.8c-66.1,0 -119.8,-53.7 -119.8,-119.9v-576.8c0,-66.2 53.6,-119.9 119.8,-119.9h442l-43.5,45.1z"/>
-    <path android:fillColor="#FF000000" android:pathData="M494.6,527.9l224.6,203.6 351.1,-388.5 -224.6,-203.6 -351.1,388.5zM1001.5,346.3l-289.8,320.7 -151.1,-137 289.8,-320.7 151.1,137z"/>
-    <path android:fillColor="#FF000000" android:pathData="M523.8,714.9l15.2,-146.7 -44.4,-40.3 -15.3,236.6 240.6,-32.4 -37.9,-34.3z"/>
-    <path android:fillColor="#FF000000" android:pathData="M900,79.5l-77.4,85.6 37.2,33.5 53.6,-59.3c12.6,-13.9 31.2,-16.3 45.1,-3.7l105,95.4c13.9,12.6 15.1,32.2 2.5,46.1l-53.6,59.3 34.8,32.3 77.4,-85.6c19.7,-21.8 18,-55.5 -3.7,-75.3l-145.7,-132.1c-21.8,-19.7 -55.4,-18.1 -75.1,3.7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="@color/md_pink_300"
+        android:pathData="M725.3,172.8C667.7,117.3 593.1,85.3 512,85.3s-155.7,32 -213.3,87.5 -87.5,132.3 -87.5,213.3c0,53.3 14.9,106.7 40.5,151.5 23.5,40.5 55.5,74.7 96,100.3v147.2c0,38.4 32,68.3 68.3,68.3h187.7c38.4,0 68.3,-32 68.3,-68.3v-147.2c38.4,-25.6 72.5,-59.7 96,-100.3 27.7,-46.9 40.5,-98.1 40.5,-151.5 4.3,-81.1 -27.7,-155.7 -83.2,-213.3zM605.9,800h-187.7c-8.5,0 -17.1,-6.4 -17.1,-17.1v-61.9h221.9v61.9c0,10.7 -8.5,17.1 -17.1,17.1zM725.3,512c-21.3,36.3 -53.3,68.3 -89.6,89.6l-12.8,8.5v61.9L401.1,672v-61.9l-12.8,-8.5c-36.3,-21.3 -68.3,-51.2 -89.6,-89.6 -21.3,-38.4 -34.1,-81.1 -34.1,-125.9 0,-66.1 25.6,-128 72.5,-174.9C384,164.3 445.9,138.7 512,138.7s128,25.6 174.9,72.5c46.9,46.9 72.5,108.8 72.5,174.9 0,42.7 -10.7,87.5 -34.1,125.9zM603.7,885.3h-183.5c-14.9,0 -25.6,12.8 -25.6,25.6 0,14.9 12.8,25.6 25.6,25.6h183.5c14.9,0 25.6,-12.8 25.6,-25.6s-10.7,-25.6 -25.6,-25.6z" />
 </vector>
