--- a/app/src/main/res/drawable/shape_search_view.xml
+++ b/app/src/main/res/drawable/shape_search_view.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF"  />
     <corners android:radius="4dp" />
+    <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
     <stroke
         android:width="0.5dp"
         android:color="#313131" />
