--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -8,23 +8,20 @@
 
     <include layout="@layout/include_appbar_toolbar" />
 
-    <TextView
-        style="@style/TwoTextMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="开发计划" />
-
-    <TextView
-        android:id="@+id/dev_plan_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1.这是开发计划说明" />
 
     <TextView
         style="@style/TwoTextMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="捐赠支持" />
+        android:padding="8dp"
+        android:text="捐赠说明" />
+
+    <TextView
+        style="@style/TwoTextMain"
+        android:padding="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/money_explain" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +36,7 @@
             android:text="支付宝" />
 
         <TextView
+            android:id="@+id/weixin_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -49,17 +47,7 @@
         style="@style/TwoTextMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="捐赠彩蛋" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="凭借捐赠截图获得获取硬币 " />
-
-    <TextView
-        style="@style/TwoTextMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:padding="8dp"
         android:text="捐赠榜单" />
 
     <com.jude.easyrecyclerview.EasyRecyclerView
