--- a/app/src/main/res/layout/activity_user_notify.xml
+++ b/app/src/main/res/layout/activity_user_notify.xml
@@ -10,11 +10,21 @@
     <include layout="@layout/include_appbar_toolbar" />
 
     <com.example.q.pocketmusic.view.widget.view.IcoTextItem
-        android:id="@+id/official_info_item"
+        android:id="@+id/preview_version_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemTitleIco="@drawable/ic_vec_update"
-        app:itemTitleText="版本更新日记" />
+        app:itemTitleText="下一版本将有什么新功能呢？" />
+
+    <View style="@style/SettingDivider" />
+
+
+    <com.example.q.pocketmusic.view.widget.view.IcoTextItem
+        android:id="@+id/usually_help_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemTitleIco="@drawable/ic_vec_setting_help"
+        app:itemTitleText="常见问题" />
 
     <View style="@style/SettingDivider" />
 
@@ -23,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemTitleIco="@drawable/ic_vec_suggestion"
-        app:itemTitleText="用户意见反馈" />
+        app:itemTitleText="意见反馈" />
 
     <View style="@style/SettingDivider" />
 </LinearLayout>
