全部改成Serialize，以及美化支持开发者版块

--- a/app/src/main/res/layout/activity_ask_song_comment.xml
+++ b/app/src/main/res/layout/activity_ask_song_comment.xml
@@ -59,14 +59,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/bg_edt_send" />
+            android:background="@drawable/shape_edt_send" />
 
         <Button
             android:id="@+id/send_comment_btn"
             android:layout_width="@dimen/button_send_width"
             android:layout_height="@dimen/button_send_height"
             android:layout_marginLeft="8dp"
-            android:background="@drawable/bg_button"
+            android:background="@drawable/shape_button"
             android:text="发送" />
     </LinearLayout>
 
