--- a/app/src/main/res/layout/activity_lead_song.xml
+++ b/app/src/main/res/layout/activity_lead_song.xml
@@ -56,6 +56,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:background="@drawable/bg_text_press"
+        android:background="@drawable/shape_text_press"
         android:text="本地导入" />
 </LinearLayout>
