--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -69,7 +69,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/bg_edt"
+            android:background="@drawable/shape_edt"
             app:srcCompat="@drawable/ic_vec_ico_add" />
 
         <com.jude.easyrecyclerview.EasyRecyclerView
@@ -86,6 +86,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:background="@drawable/bg_text_press"
+        android:background="@drawable/shape_text_press"
         android:text="上传" />
 </LinearLayout>
