--- a/app/src/main/res/layout/activity_user_notify.xml
+++ b/app/src/main/res/layout/activity_user_notify.xml
@@ -23,7 +23,7 @@
         android:id="@+id/usually_help_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemTitleIco="@drawable/ic_vec_setting_help"
+        app:itemTitleIco="@drawable/ic_vec_help"
         app:itemTitleText="常见问题" />
 
     <View style="@style/SettingDivider" />
