--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_dialog"
+    android:background="@drawable/shape_dialog"
     android:orientation="vertical">
 
     <TextView
@@ -41,7 +41,7 @@
             android:layout_height="45dp"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_text_press"
+            android:background="@drawable/shape_text_press"
             android:gravity="center"
             android:text="取消"
             android:textColor="#777777"
@@ -53,7 +53,7 @@
             android:layout_height="45dp"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_text_press"
+            android:background="@drawable/shape_text_press"
             android:gravity="center"
             android:text="确定"
             android:textColor="@color/Text"
