--- a/app/src/main/res/layout/item_money_support.xml
+++ b/app/src/main/res/layout/item_money_support.xml
@@ -1,31 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+
+    android:padding="8dp">
 
     <ImageView
-        android:id="@+id/head_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/head_support_iv"
+        android:layout_width="@dimen/item_head"
+        android:layout_height="@dimen/item_head"
+        android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/nick_name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="4dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/money_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/nick_name_support_tv"
+            style="@style/TwoTextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="化身孤岛的鲸鱼" />
 
-    <TextView
-        android:id="@+id/content_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/money_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/md_red_300"
+            tools:text="0.22元" />
 
-    <TextView
-        android:id="@+id/date_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/content_tv"
+                style="@style/TwoTextMain"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="很喜欢这个APP" />
+
+            <TextView
+
+                android:id="@+id/date_tv"
+                style="@style/TwoTextSecond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="88dp"
+                tools:text="2014.02.03 21:33" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </LinearLayout>
