--- a/app/src/main/res/layout/activity_acg.xml
+++ b/app/src/main/res/layout/activity_acg.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.q.pocketmusic.module.home.net.acg.ACGActivity">
 
     <include layout="@layout/include_appbar_toolbar" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="\n\tACG专区开发中~有什么需求请在首页-->小铃铛-->意见反馈给我吧!\n\t或者群里直接Q我也行哦！" />
+</LinearLayout>
